# AIKeyVault

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh-CN.md  create_release.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: PRD.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: PLACEHOLDER.md  README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/clipboard/: manager.rs  mod.rs
src-tauri/src/commands/: mod.rs  settings.rs  vault.rs
src-tauri/src/crypto/: aes.rs  argon2.rs  mod.rs
src-tauri/src/database/: mod.rs  sqlite.rs
src-tauri/src/import_export/: kvx.rs  mod.rs
src-tauri/src/shortcut/: manager.rs  mod.rs
src-tauri/src/startup/: manager.rs
src-tauri/src/tray/: manager.rs  mod.rs
src-tauri/src/vault/: manager.rs  mod.rs  state.rs
src/components/: GlobalStateListener.tsx  ProviderIcon.tsx  ProviderSelect.tsx  README.md  Toast.tsx  UpdateCheckModal.tsx  VaultItemRow.tsx
src/hooks/: README.md  useHeartbeat.ts  useSearchKeyboard.ts  useVault.ts
src/i18n/: config.ts
src/i18n/locales/: en-US.json  ja-JP.json  ko-KR.json  zh-CN.json
src/pages/: DashboardPage.tsx  OnboardingView.tsx  README.md  SearchPage.tsx  UnlockView.tsx
src/pages/dashboard/: KeysPanel.tsx  README.md  SecurityPanel.tsx  SystemPanel.tsx
src/store/: README.md
src/styles/: globals.css
src/types/: README.md  index.ts
(+28 files in other folders)
