[package]
name = "aikeyvault"
version = "1.0.1"
description = "本地优先的 AI API Key 管理工具"
authors = ["AIKeyVault Team"]
license = "MIT"
repository = "https://github.com/your-org/aikeyvault"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密与安全核心依赖
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
rand = "0.8"
base64 = "0.22"

# 实用工具
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.8.2", features = ["alloc"] }
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
